correct horizontal vviewport overflow due to pagination nav element

--- a/src/css/vocabulary.css
+++ b/src/css/vocabulary.css
@@ -2013,10 +2013,6 @@ body > footer .license svg {
         order: -1;
     }
 
-    main nav.pagination {
-        width: 100%;
-    }
-
     main nav.pagination ol {
         /* width: 100%; */
         flex-wrap: wrap;
